--- a/css/blocks/hero__container.scss
+++ b/css/blocks/hero__container.scss
@@ -73,7 +73,7 @@ a{
 }
 .sidebar__elem_txt{
 	color: #ffffff;
-	font-family: Ubuntu;
+	font-family: 'Ubuntu';
 	font-size: 0.8125rem;
 	font-weight: 500;
 	line-height: 1.875rem;
@@ -92,7 +92,7 @@ a{
 	align-items: center;
 	justify-content: center;
 	color: #ffffff;
-	font-family: Ubuntu;
+	font-family: 'Ubuntu';
 	font-size: 0.8125rem;
 	font-weight: 500;
 	line-height: 1.875rem;
@@ -133,14 +133,14 @@ a{
 }
 .content__txt1{
 	color: #f9b43b;
-	font-family: Gagalin;
+	font-family: 'Gagalin-Regular';
 	font-size: 4.5rem;
 	font-weight: 400;
 	line-height: 5.3125rem;
 }
 .content__txt2{
 	color: #ffffff;
-	font-family: Lifehack;
+	font-family: 'Lifehack-Medium';
 	font-weight: 500;
 	font-size: 4.0625rem;
 	letter-spacing: -0.0625rem;
@@ -148,7 +148,7 @@ a{
 }
 .content__txt3{
 	color: #ffffff;
-	font-family: Lifehack;
+	font-family: 'Lifehack-Medium';
 	font-weight: 500;
 	font-size: 4.0625rem;
 	letter-spacing: -0.0625rem;
