--- a/css/blocks/menu-page.scss
+++ b/css/blocks/menu-page.scss
@@ -9,7 +9,7 @@
 }
 .menu__page .menu__title{
   	color: #ffffff;
-	font-family: Gagalin;
+	font-family: 'Gagalin-Regular';
 	font-size: 4.5rem;
 	font-weight: 400;
 	line-height: 4rem;
@@ -64,7 +64,7 @@
 }
 .accordeon-menu__txt{
 	padding: 1.875rem;
-	width: 31.25rem;
+	width: 28.25rem;
 }
 .accordeon-menu__elem:hover {
 	.accordeon-menu__content{
