--- a/css/blocks/hero-page.scss
+++ b/css/blocks/hero-page.scss
@@ -1,3 +1,15 @@
+$tablets: 768px;
+$phones: 480px;
+@mixin tablets {
+	@media (max-width: $tablets) {
+		@content;
+	}
+}
+@mixin phones {
+	@media (max-width: $phones) {
+		@content;
+	}
+}
 .hero-page{	
 	display: flex;
 	position: relative;
@@ -12,4 +24,10 @@
 
 html{
 	font-size: 16px;
-}	
+	@include tablets{
+	font-size: 13px;
+}
+	@include phones{
+		font-size:11px;
+	}
+}
