--- a/css/blocks/hero__container.css
+++ b/css/blocks/hero__container.css
@@ -70,7 +70,7 @@ a {
 
 .sidebar__elem_txt {
   color: #ffffff;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.8125rem;
   font-weight: 500;
   line-height: 1.875rem;
@@ -97,7 +97,7 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   color: #ffffff;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.8125rem;
   font-weight: 500;
   line-height: 1.875rem;
@@ -150,14 +150,14 @@ a {
 
 .content__txt1 {
   color: #f9b43b;
-  font-family: Gagalin;
+  font-family: 'Gagalin-Regular';
   font-size: 4.5rem;
   font-weight: 400;
   line-height: 5.3125rem; }
 
 .content__txt2 {
   color: #ffffff;
-  font-family: Lifehack;
+  font-family: 'Lifehack-Medium';
   font-weight: 500;
   font-size: 4.0625rem;
   letter-spacing: -0.0625rem;
@@ -165,7 +165,7 @@ a {
 
 .content__txt3 {
   color: #ffffff;
-  font-family: Lifehack;
+  font-family: 'Lifehack-Medium';
   font-weight: 500;
   font-size: 4.0625rem;
   letter-spacing: -0.0625rem;
