--- a/css/blocks/mapandfooter.css
+++ b/css/blocks/mapandfooter.css
@@ -59,7 +59,7 @@
 
 .contacts__adress {
   color: #ffffff;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.875rem;
   font-weight: 300;
   line-height: 1.5rem; }
@@ -74,7 +74,7 @@
   background-position: -0.3125rem -2.1875rem; }
 
 .contacts__number {
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.875rem;
   color: #e45028;
   margin-left: 0.4375rem;
@@ -95,9 +95,12 @@
 
 .footer-icon {
   width: 20px;
-  padding: 10px;
-  height: 20px; }
+  margin-right: 10px;
+  height: 20px;
+  fill: #585858;
+  padding: 3px;
+  border-radius: 3px; }
 
 .footer-icon:hover {
-  background-color: #ffffff;
-  border-radius: 25%; }
+  background-color: #fff;
+  fill: #000; }
