--- a/css/blocks/people-page.css
+++ b/css/blocks/people-page.css
@@ -15,7 +15,8 @@
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
-      flex-direction: column; } }
+      flex-direction: column;
+      height: 100%; } }
 
 .people__elements {
   display: -webkit-box;
@@ -98,14 +99,14 @@
 
 .people__name {
   color: #ffffff;
-  font-family: Gagalin;
+  font-family: 'Gagalin-Regular';
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.75rem; }
 
 .people__comment {
   color: #ffffff;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.875rem;
   font-weight: 300;
   line-height: 1.5rem; }
@@ -153,7 +154,7 @@
   width: 100%;
   height: 100%;
   color: #ffffff;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.8125rem;
   font-weight: 500;
   line-height: 1.875rem;
