--- a/css/blocks/people-page.scss
+++ b/css/blocks/people-page.scss
@@ -29,6 +29,7 @@ $phones: 480px;
 	@include tablets {
 	display: flex;
     flex-direction: column;
+    height: 100%;
 }
 }
 .people__elements{
@@ -93,14 +94,14 @@ $phones: 480px;
 
 .people__name{
 	color: #ffffff;
-	font-family: Gagalin;
+	font-family: 'Gagalin-Regular';
 	font-size: 0.875rem;
 	font-weight: 400;
 	line-height: 1.75rem;
 }
 .people__comment{
 	color: #ffffff;
-	font-family: Ubuntu;
+	font-family: 'Ubuntu';
 	font-size: 0.875rem;
 	font-weight: 300;
 	line-height: 1.5rem;
@@ -130,7 +131,7 @@ $phones: 480px;
 	width: 100%;
 	height: 100%;
 	color: #ffffff;
-	font-family: Ubuntu;
+	font-family: 'Ubuntu';
 	font-size: 0.8125rem;
 	font-weight: 500;
 	line-height: 1.875rem;
