--- a/css/blocks/team.css
+++ b/css/blocks/team.css
@@ -46,9 +46,9 @@
   bottom: 0;
   background-color: #2f3234;
   opacity: 0.93; }
-  @media (max-width: 768px) {
+  @media (max-width: 480px) {
     .container__block {
-      top: 15.5%; } }
+      width: 100%; } }
 
 .accordeon__block {
   display: -webkit-box;
@@ -96,7 +96,7 @@
   left: 0;
   top: 0;
   color: #f9b43b;
-  font-family: Gagalin;
+  font-family: 'Gagalin-Regular';
   font-size: 4.5rem;
   font-weight: 400;
   line-height: 4rem; }
@@ -140,7 +140,7 @@
 .team-name__txt {
   padding: 5%;
   color: #ffffff;
-  font-family: Gagalin;
+  font-family: 'Gagalin-Regular';
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.75rem; }
@@ -198,14 +198,14 @@
 
 .dscr-txt__function {
   color: #ffffff;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.875rem;
   line-height: 1.5rem;
   font-weight: 700; }
 
 .dscr-txt__txt {
   color: #ffffff;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.875rem;
   font-weight: 300;
   line-height: 1.5rem; }
