--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -50,8 +50,10 @@ $phones: 480px;
 	background-color: #2f3234;
 	opacity: 0.93;
 	@include tablets {
-	top: 15.5%;
 }
+	@include phones {
+		width: 100%;
+	}
 }
 .accordeon__block{
 	display: flex;
@@ -83,7 +85,7 @@ $phones: 480px;
 	left: 0;
 	top: 0;
 	color: #f9b43b;
-	font-family: Gagalin;
+	font-family: 'Gagalin-Regular';
 	font-size: 4.5rem;
 	font-weight: 400;
 	line-height: 4rem;
@@ -113,7 +115,7 @@ $phones: 480px;
 .team-name__txt{
 	padding: 5%;
 	color: #ffffff;
-	font-family: Gagalin;
+	font-family: 'Gagalin-Regular';
 	font-size: 0.875rem;
 	font-weight: 400;
 	line-height: 1.75rem;
@@ -152,14 +154,14 @@ $phones: 480px;
 }
 .dscr-txt__function{
 	color: #ffffff;
-	font-family: Ubuntu;
+	font-family: 'Ubuntu';
 	font-size: 0.875rem;
 	line-height: 1.5rem;
 	font-weight: 700;
 }
 .dscr-txt__txt{
 	color: #ffffff;
-	font-family: Ubuntu;
+	font-family: 'Ubuntu';
 	font-size: 0.875rem;
 	font-weight: 300;
 	line-height: 1.5rem;
