--- a/css/blocks/we-best.css
+++ b/css/blocks/we-best.css
@@ -61,14 +61,15 @@ ul {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
-      flex-direction: column; } }
+      flex-direction: column;
+      height: 100%; } }
 
 .content__block ul {
   list-style-type: none; }
 
 .container__txt {
   color: #2f3234;
-  font-family: Gagalin;
+  font-family: 'Gagalin-Regular';
   font-size: 4.5rem;
   font-weight: 400;
   line-height: 4rem; }
@@ -88,7 +89,7 @@ ul {
 
 .content__elem_txt1 {
   color: #2f3234;
-  font-family: Lifehack;
+  font-family: 'Lifehack-Medium';
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 1.75rem;
@@ -98,7 +99,7 @@ ul {
   width: 17.5625rem;
   opacity: 0.8;
   color: #2f3234;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu';
   font-size: 0.875;
   font-weight: 300;
   line-height: 1.5rem; }
