--- a/css/main.scss
+++ b/css/main.scss
@@ -14,5 +14,6 @@ $phones: 480px;
 @import "blocks/delivery.scss";
 @import "blocks/mapandfooter.scss";
 @import "general/media.scss";
+@import "blocks/burghers.scss";
 
 
