--- a/css/blocks/hero__container.scss
+++ b/css/blocks/hero__container.scss
@@ -86,6 +86,38 @@ a{
   border-radius: 50%;
   background-color: #fff;
 }
+.mobile__sidebar{
+	display: flex;
+	flex-direction: column;
+	display: visible;
+}
+
+.adaptive__sidebar{
+	display: flex;
+	position: absolute;
+	top: 75%;
+    left: -105%;
+		@include phones {
+	    top: 8%;
+    	left: 27%;
+}
+}
+
+.mobile__elements{
+	display: flex;
+	border: solid 1px #ffcc99;
+	border-radius: 19%;
+	justify-content: center;
+}
+.mobile__item{
+	font-family: Ubuntu;
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 30px;
+	text-transform: uppercase;
+	text-align: center;
+}
+
 .button{
 	display: flex;
 	right: 0%;
