--- a/css/blocks/menu-page.css
+++ b/css/blocks/menu-page.css
@@ -61,7 +61,7 @@
   transform: rotate(-90deg) translateY(-50%);
   white-space: nowrap;
   color: #ffffff;
-  font-family: Gagalin;
+  font-family: 'Gagalin-Regular';
   font-size: 2.5rem;
   font-weight: 400;
   line-height: 3.9375rem;
