--- a/css/blocks/we-best.scss
+++ b/css/blocks/we-best.scss
@@ -68,6 +68,9 @@ ul {
 .content__block ul {
 	list-style-type: none;
 }
+.img__elem{
+	margin-right: 3%;
+}
 
 .container__txt{
 	color: #2f3234;
@@ -81,6 +84,9 @@ ul {
 	text-align: center;
 	flex-direction: column;
 	align-items: center;
+			    @include phones {
+	flex-direction: row;
+}
 }
 .content__elem_txt1{
 	color: #2f3234;
@@ -89,6 +95,9 @@ ul {
 	font-weight: 500;
 	line-height: 1.75rem;
 	letter-spacing: -0.6px;
+			    @include phones {
+	text-align: left;
+}
 }
 .content__elem_txt2{
 	width: 17.5625rem;
@@ -98,6 +107,10 @@ ul {
 	font-size: 	0.875;
 	font-weight: 300;
 	line-height: 1.5rem;
+				    @include phones {
+	text-align: left;
+	width: 25.5625rem;
+}
 }
 .content__elem li{
 	margin-bottom: 1.25rem;
