--- a/css/main.scss
+++ b/css/main.scss
@@ -15,5 +15,6 @@ $phones: 480px;
 @import "blocks/mapandfooter.scss";
 @import "general/media.scss";
 @import "blocks/burghers.scss";
+@import "blocks/mobile-menu.scss";
 
 
