--- a/css/blocks/mapandfooter.css
+++ b/css/blocks/mapandfooter.css
@@ -23,6 +23,9 @@
   background-image: url(../img/footer-bg.png);
   background-repeat: no-repeat;
   background-size: cover; }
+  @media (max-width: 480px) {
+    .footer {
+      height: 8.75rem; } }
 
 .footer__content {
   display: -webkit-box;
@@ -37,6 +40,16 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
   background-repeat: no-repeat; }
+  @media (max-width: 480px) {
+    .footer__content {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      height: 8.75rem;
+      -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+      justify-content: space-evenly; } }
 
 .footer__contacts-block {
   display: -webkit-box;
@@ -46,6 +59,11 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column; }
+  @media (max-width: 480px) {
+    .footer__contacts-block {
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      height: 50%; } }
 
 .footer__contacts {
   display: -webkit-box;
@@ -72,6 +90,11 @@
   -ms-flex-align: center;
   align-items: center;
   background-position: -0.3125rem -2.1875rem; }
+  @media (max-width: 480px) {
+    .contacts__telefon {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .contacts__number {
   font-family: 'Ubuntu';
@@ -92,6 +115,13 @@
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end; }
+  @media (max-width: 480px) {
+    .footer__social {
+      height: auto;
+      width: 100%;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .footer-icon {
   width: 20px;
