--- a/css/blocks/mapandfooter.scss
+++ b/css/blocks/mapandfooter.scss
@@ -1,3 +1,26 @@
+$tablets: 768px;
+$phones: 480px;
+
+@media (max-width: $tablets) {
+
+}
+
+@media (max-width: $phones) {
+
+}
+
+@mixin tablets {
+  @media (max-width: $tablets) {
+    @content;
+  }
+}
+@mixin phones {
+  @media (max-width: $phones) {
+    @content;
+  }
+}
+
+
 .map__footer-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -22,7 +45,11 @@
   height: 3.75rem;
   background-image: url(../img/footer-bg.png);
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+            @include phones {
+  height: 8.75rem;
+} 
+   }
 
 .footer__content {
   display: -webkit-box;
@@ -36,7 +63,13 @@
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+          @include phones {
+  flex-direction: column;
+  height: 8.75rem;
+  justify-content: space-evenly;
+} 
+}
 
 .footer__contacts-block {
   display: -webkit-box;
@@ -45,7 +78,12 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column; }
+  flex-direction: column;
+              @include phones {
+    justify-content: space-around;
+    height: 50%;
+}
+   }
 
 .footer__contacts {
   display: -webkit-box;
@@ -71,7 +109,11 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  background-position: -0.3125rem -2.1875rem; }
+  background-position: -0.3125rem -2.1875rem;
+          @include phones {
+  justify-content: center;
+}
+   }
 
 .contacts__number {
   font-family: 'Ubuntu';
@@ -91,7 +133,13 @@
   height: 100%;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
-  justify-content: flex-end; }
+  justify-content: flex-end; 
+          @include phones {
+  height: auto;
+  width: 100%;
+  justify-content: center;
+}
+}
 .footer-icon{
   width: 20px;
   margin-right: 10px;
