--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -69,6 +69,9 @@ $phones: 480px;
 	flex-wrap: wrap;
 	padding-left: inherit;
 	margin: 0;
+			    @include tablets {
+	text-align: center;
+}
 }
 
 
