--- a/css/main.css
+++ b/css/main.css
@@ -1115,6 +1115,9 @@ ul {
   flex-wrap: wrap;
   padding-left: inherit;
   margin: 0; }
+  @media (max-width: 768px) {
+    .accordeon__elements {
+      text-align: center; } }
 
 .team__dscr__block {
   display: -webkit-box;
@@ -1718,6 +1721,9 @@ ul {
   background-image: url(../img/footer-bg.png);
   background-repeat: no-repeat;
   background-size: cover; }
+  @media (max-width: 480px) {
+    .footer {
+      height: 8.75rem; } }
 
 .footer__content {
   display: -webkit-box;
@@ -1732,6 +1738,16 @@ ul {
   -ms-flex-pack: justify;
   justify-content: space-between;
   background-repeat: no-repeat; }
+  @media (max-width: 480px) {
+    .footer__content {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      height: 8.75rem;
+      -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+      justify-content: space-evenly; } }
 
 .footer__contacts-block {
   display: -webkit-box;
@@ -1741,6 +1757,11 @@ ul {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column; }
+  @media (max-width: 480px) {
+    .footer__contacts-block {
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      height: 50%; } }
 
 .footer__contacts {
   display: -webkit-box;
@@ -1767,6 +1788,11 @@ ul {
   -ms-flex-align: center;
   align-items: center;
   background-position: -0.3125rem -2.1875rem; }
+  @media (max-width: 480px) {
+    .contacts__telefon {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .contacts__number {
   font-family: 'Ubuntu';
@@ -1787,6 +1813,13 @@ ul {
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end; }
+  @media (max-width: 480px) {
+    .footer__social {
+      height: auto;
+      width: 100%;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .footer-icon {
   width: 20px;
@@ -1875,10 +1908,10 @@ ul {
   align-items: center; }
 
 .burgher__item-elem {
-  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: absolute;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -1891,10 +1924,14 @@ ul {
   border-radius: 10%;
   margin-top: -50%;
   left: 10%; }
+  @media (max-width: 768px) {
+    .burgher__item-elem {
+      margin-top: -16vh;
+      left: -15vw; } }
   @media (max-width: 480px) {
     .burgher__item-elem {
-      margin-top: -100%;
-      left: -35%; } }
+      top: 18%;
+      left: -30%; } }
 
 .elem__img {
   display: -webkit-box;
@@ -1953,8 +1990,8 @@ ul {
   left: 10%; }
   @media (max-width: 768px) {
     .burgher__item-elem2 {
-      top: -22%;
-      left: 80%; } }
+      top: -1vh;
+      left: 50vw; } }
   @media (max-width: 480px) {
     .burgher__item-elem2 {
       top: -25%;
@@ -1997,6 +2034,7 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -2084,14 +2122,91 @@ ul {
   font-weight: 500;
   line-height: 1.875rem;
   text-transform: uppercase;
-  right: 20%;
-  bottom: 28%;
-  cursor: pointer; }
+  cursor: pointer;
+  left: 60%;
+  top: 80%; }
   @media (max-width: 768px) {
     .burghers__btn {
-      right: 35%;
-      bottom: 16%; } }
+      top: 82%; } }
   @media (max-width: 480px) {
     .burghers__btn {
-      right: 20%;
-      bottom: 15%; } }
+      top: 85%; } }
+
+.mobile-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 200vw;
+  width: 100vw;
+  height: 100vh;
+  background-color: #2f3234;
+  opacity: 0.99;
+  z-index: 100;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s; }
+
+.mobile-menu--open {
+  left: 0; }
+
+.mobile-menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.mobile-menu__link {
+  color: #ffffff;
+  font-family: 'Ubuntu';
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 2.5rem;
+  text-transform: uppercase; }
+
+.mobile-menu__link:hover {
+  color: #f9b43b; }
+
+.close-icon {
+  position: absolute;
+  top: 3%;
+  right: 6%;
+  fill: #fff;
+  height: 20px;
+  width: 20px; }
+
+.mobile__sidebar {
+  position: absolute;
+  top: 3.5%;
+  right: 6%;
+  display: none; }
+  @media (max-width: 480px) {
+    .mobile__sidebar {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
+  @media (max-width: 768px) {
+    .mobile__sidebar {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
+
+.circle-side {
+  width: 0.6rem;
+  height: 0.6rem; }
